# wsplumber

./: .env  .gitignore  AUDITORIA_COMPLETA_FLUJOS_CORE.md  CHANGELOG.md  Dockerfile  FIXES_APPLIED_SUMMARY.md  Fixing Backtest Equity Drain.md  README.md  audit_f03.txt  audit_output.txt  audit_r05.txt  audit_r05_limpio.txt  audit_r05_long.txt  audit_r05_long_limpio.txt  audit_r05_ultimate.txt  audit_r05_v3_1.txt  audit_r07_output.txt  audit_report_swarm_mc_0.txt  audit_report_swarm_mc_1.txt  audit_report_swarm_mc_2.txt  audit_report_swarm_mc_3.txt  audit_report_swarm_mc_4.txt  audit_scenario_5_1.txt  audit_scenario_6_1.txt  auditoria_completa_sistema.md  backtest_10k_results.txt  backtest_500k_post_fix.txt  backtest_500k_results.txt  conversacio_1.1.md  conversacion_2.md  conversation_renovacion_mains.md  current_scenarios_results.txt  debug_accounting_r03.py  equity_drain_analysis.md  implementation_plan_api.md  pyproject.toml  render.yaml  requirements.txt  robustness_cert_lehman_2008.md  robustness_cert_r07_cascade_n1_n2_n3.md  (+13 more)
data/: events_2015.csv
docs/: BACKTEST_10K_REPORT.md  BUG_FIX_DOUBLE_CLOSE_RACE_CONDITION.md  BUG_FIX_FIFO_HEDGE_LINKING.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_BUG_FIX_REPORT.md  FINAL_BUG_FIX_REPORT_V2.md  api.md  architecture.md  audit_current_implementation_logs.md  audit_cycles.md  audit_expected_logs.md  audit_gap_analysis.md  backtest_optimization_report.md  balance_equity_gap_analysis.md  bug_fix_cycle_renewal.md  configuration.md  conversation_pips.md  core_verification.md  debug_reference.md  deployment.md  escenarios_detallados.md  expected_behavior_specification.md  expted_behavior_specification_fixed.md  files_to_update_cycle_renewal.md  fix_balance_equity_gap.md  fix_equity_drain_zombie_positions.md  fractal_gatekeeper_theory.md  immune_system_layers_2_3.md  immune_system_specification.md  matriz_validacion.md  resumen_problemas_y_fixes.md  robustness_interpretation_guide.md  robustness_standards.md  scenarios.md  segment_1_audit.md  swarm_robustness_report.md  testing.md  verification_strategy.md  ws_plumber_system.md
frontend/: 404.html  500.html  503.html  503_b.html
new/: dashboard.html  new_dashboard_v3.html  new_look 2.html  new_look 3.html  new_look.html  pyproject.toml  supabase_schema (1).sql  test_connection.py
notebooks/: wsplumber_backtest_gpu.ipynb
scripts/: analyze_2015_data.py  analyze_fractal_sensitivity.py  analyze_logs.py  analyze_logs_detailed.py  analyze_logs_final.py  analyze_parents.py  analyze_wsplumber_fifo.py  audit_by_cycle.py  audit_cycles.py  audit_fractal_multiyear.py  audit_integrity.py  audit_scenario.py  audit_segmented.py  backtest_trace.py  backtest_trace_detailed.py  check_explosion.py  comparative_2015.py  convert_ohlc_to_ticks.py  convert_scenarios_to_parquet.py  crash_signature_study.py  csv_to_parquet.py  cycle_tree_viewer.py  data_slicer.py  debug_balance_drops.py  diagnose_checkpoint.py  diagnose_zombies.py  dsl_engine.py  extract_fomc_data.py  extract_test_range.py  find_zombies.py  find_zombies_v2.py  generate_10k_simulation.py  generate_backtest_charts.py  generate_layer1b_scenario.py  generate_layer1b_scenarios.py  generate_test_scenarios.py  generator_monte_carlo.py  investigate_snb_hurst.py  mass_audit_runner.py  master_backtest_reporter.py  (+15 more)
tests/: fidelity_v2_overlap_test.py  get_backtest_stats.py  get_backtest_stats_v2.py  run_2015_full.py  run_all_scenarios.py  test_all_scenarios.py  test_chained_simulation.py  test_complete_hedge_flow.py  test_cycle_renewal_fix.py  test_detailed_flow_validation.py  test_fifo_broker_fix.py  test_fifo_complex.py  test_fifo_fidelidad.py  (+9 more)
(+176 files in other folders)
