[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsplumber"
version = "0.1.0"
description = "El Fontanero de Wall Street - Sistema de Trading con Coberturas"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    
    # Database
    "supabase>=2.3.0",
    "asyncpg>=0.29.0",
    
    # Trading
    "MetaTrader5>=5.0.45;platform_system=='Windows'",
    "httpx>=0.26.0",  # Para Darwinex API
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",  # Para parquet
    
    # Async
    "asyncio>=3.4.3",
    "aiofiles>=23.2.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",  # Para CLI bonito
    
    # Monitoring
    "psutil>=5.9.0",
    
    # Security
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
]

compile = [
    "cython>=3.0.0",
    "setuptools>=61.0",
]

[project.scripts]
wsplumber = "wsplumber.cli:main"
wsplumber-backtest = "wsplumber.backtesting.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wsplumber = ["py.typed"]

# ============================================
# TOOLS CONFIGURATION
# ============================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | core_compiled
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    "core_compiled",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
exclude = [
    "core_compiled",
    "tests",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/wsplumber"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/core/*",  # No medir coverage del core secreto
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
